<resources>
    <string name="app_name">Tflite Paper E1</string>
    <string name="home">選單</string>
    <string name="record">錄音</string>
    <string name="upload">上傳</string>
    <string name="open">打開</string>
    <string name="close">關閉</string>
    <string name="label">標籤</string>
    <string name="topic">注音類別</string>
    <string name="form_topic">個案評量表</string>
    <string name="test_info">病歷資訊</string>
    <string name="id">編號</string>
    <string name="caseid">病歷號</string>
    <string name="date">施測日期</string>
    <string name="tester">施測人員</string>
    <string name="doctor">主治醫師</string>
    <string name="case_info">個案資訊</string>
    <string name="name">姓名</string>
    <string name="birthday">生日</string>
    <string name="gender">性別</string>
    <string name="age">實足年齡</string>
    <string name="school">就讀學校</string>
    <string name="parent_info">家長資訊</string>
    <string name="parent_name">家長姓名</string>
    <string name="contact_number">連絡電話</string>
    <string name="next">開始測驗</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="wordcard">字卡</string>
    <string name="recode">錄音</string>
    <string name="play">播放</string>
    <string name="errorclass">診斷(點擊選擇)</string>
    <string name="correct">正確</string>
    <string name="store">儲存</string>
    <string name="alphabet01">ㄅ</string>
    <string name="alphabet02">ㄆ</string>
    <string name="alphabet03">ㄇ</string>
    <string name="alphabet04">ㄈ</string>
    <string name="alphabet05">ㄉ</string>
    <string name="alphabet06">ㄊ</string>
    <string name="alphabet07">ㄋ</string>
    <string name="alphabet08">ㄌ</string>
    <string name="alphabet09">ㄍ</string>
    <string name="alphabet10">ㄎ</string>
    <string name="alphabet11">ㄏ</string>
    <string name="alphabet12">ㄐ</string>
    <string name="alphabet13">ㄑ</string>
    <string name="alphabet14">ㄒ</string>
    <string name="alphabet15">ㄓ</string>
    <string name="alphabet16">ㄔ</string>
    <string name="alphabet17">ㄕ</string>
    <string name="alphabet18">ㄖ</string>
    <string name="alphabet19">ㄗ</string>
    <string name="alphabet20">ㄘ</string>
    <string name="alphabet21">ㄙ</string>
    <string name="alphabet22">ㄧ</string>
    <string name="alphabet23">ㄩ</string>
    <string name="alphabet24">ㄚ</string>
    <string name="alphabet25">ㄛ</string>
    <string name="alphabet26">ㄜ</string>
    <string name="alphabet27">ㄝ</string>
    <string name="alphabet28">ㄞ</string>
    <string name="alphabet29">ㄟ</string>
    <string name="alphabet30">ㄠ</string>
    <string name="alphabet31">ㄡ</string>
    <string name="alphabet32">ㄢ</string>
    <string name="alphabet33">ㄣ</string>
    <string name="alphabet34">ㄤ</string>
    <string name="alphabet35">ㄥ</string>
    <string name="alphabet36">ㄦ</string>
    <string name="alphabet37">ㄦ</string>
    <string name="alphabet38">ㄦ</string>
    <string name="alphabet39">ㄦ</string>
    <string name="alphabet40">ㄦ</string>
    <string name="wordcard01_1">布丁</string>
    <string name="wordcard01_3">大白菜</string>
    <string name="wordcard02_1">螃蟹</string>
    <string name="wordcard02_3">蓮蓬頭</string>
    <string name="wordcard03_1">帽子</string>
    <string name="wordcard03_3">捉迷藏</string>
    <string name="wordcard04_1">鳳梨</string>
    <string name="wordcard04_3">吹風機</string>
    <string name="wordcard05_1">動物</string>
    <string name="wordcard05_3">看電視</string>
    <string name="wordcard06_1">太陽</string>
    <string name="wordcard06_2">枕頭</string>
    <string name="wordcard07_1">鈕扣</string>
    <string name="wordcard07_3">喝奶昔</string>
    <string name="wordcard08_2">恐龍</string>
    <string name="wordcard08_3">養樂多</string>
    <string name="wordcard09_2">烏龜</string>
    <string name="wordcard09_3">去公園</string>
    <string name="wordcard10_1">筷子</string>
    <string name="wordcard10_2">貝殼</string>
    <string name="wordcard11_1">漢堡</string>
    <string name="wordcard11_3">救護車</string>
    <string name="wordcard12_2">果醬</string>
    <string name="wordcard12_3">指甲刀</string>
    <string name="wordcard13_2">鋼琴</string>
    <string name="wordcard13_3">中秋節</string>
    <string name="wordcard14_1">信封</string>
    <string name="wordcard14_3">口香糖</string>
    <string name="wordcard15_2">蠟燭</string>
    <string name="wordcard15_3">擦桌子</string>
    <string name="wordcard16_1">抽屜</string>
    <string name="wordcard16_3">柳橙汁</string>
    <string name="wordcard17_1">閃電</string>
    <string name="wordcard17_2">牙刷</string>
    <string name="wordcard18_1">日歷</string>
    <string name="wordcard18_2">超人</string>
    <string name="wordcard19_1">走路</string>
    <string name="wordcard19_3">水族箱</string>
    <string name="wordcard20_1">草莓</string>
    <string name="wordcard20_3">上廁所</string>
    <string name="wordcard21_1">掃把</string>
    <string name="wordcard21_2">垃圾</string>
    <string name="wordcard21_3">去散步</string>
    <string name="wordcard24_1">杜鵑花</string>
    <string name="wordcard24_2">選擇</string>
    <string name="inference">開始分析</string>
    <string name="todo">TODO</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="average">average</string>
    <string name="textview3">TextView</string>
    <string name="name1">名稱</string>
    <string name="result_title">分析結果</string>
    <string name="_1_98">1名稱 98%</string>
    <string name="_2_98">2名稱 98%</string>
    <string name="_3_98">3名稱 98%</string>
    <string name="_2">內容2</string>
    <string name="_3">內容3</string>
    <string name="_1">內容1</string>
    <string name="Inferenceing">分析中...</string>
    <string name="Q1">1.請問個案性別為？</string>
    <string name="Q2">2.請問個案是否有手足？</string>
    <string name="A1.1">有</string>
    <string name="A1.2">沒有</string>
    <string name="Q3">3.屬中有無以下的語言障礙？（可複選）</string>
    <string name="A2.1">口齒不清晰</string>
    <string name="A2.2">說話性語音障礙（大舌頭）</string>
    <string name="A2.3">嗓音障礙（沙啞）</string>
    <string name="A2.4">口吃</string>
    <string name="A2.5">語言發展遲緩</string>
    <string name="Q4">4.母親懷孕時的狀況？</string>
    <string name="A3.1">良好</string>
    <string name="A3.2">須安胎</string>
    <string name="A3.3">常生病</string>
    <string name="A3.4">曾服用過長時間的藥物</string>
    <string name="Q5">5.個案的進食狀況？</string>
    <string name="A4.1">良好</string>
    <string name="A4.2">挑食</string>
    <string name="A4.3">胃口不佳</string>
    <string name="A4.4">咀嚼困難</string>
    <string name="A4.5">流口水</string>
    <string name="Q6">6.個案的呼吸狀況？</string>
    <string name="A5.1">正常</string>
    <string name="A5.2">有雜音</string>
    <string name="A5.3">由口呼吸</string>
    <string name="Q7">7.個案是否有/曾經有以下的狀況？</string>
    <string name="A6.1">聽力障礙</string>
    <string name="A6.2">肺炎</string>
    <string name="A6.3">支氣管炎</string>
    <string name="A6.4">過敏</string>
    <string name="A6.5">水痘</string>
    <string name="A6.6">語言發展遲緩</string>
    <string name="A6.7">開刀/住院</string>
    <string name="A6.8">情緒行為障礙</string>
    <string name="A6.9">其他</string>
    <string name="Q8">8.個案是否/曾有接受過療育課程？</string>
    <string name="A7.1">物理治療</string>
    <string name="A7.2">職能治療</string>
    <string name="A7.3">心理治療</string>
    <string name="A7.4">語言治療</string>
    <string name="A7.5">其他</string>
    <string name="information1">
        親愛的家長您好，\n
        「SPEAK 說話好好說」為提供家長一個初步居家篩檢語音/構音狀況的工具，藉由APP的篩檢您可以初步了解您的孩子錯誤音的狀況，\n
        居家中可以了解如何協助您的孩子，也讓您可以與語言治療師或幼兒園教師針對孩子的錯誤狀況，作為與老師們進行討論的依據或為孩子安排一個適合的治療方式。\n
        APP的設計後面也連結相關的衛教單張，讓家長在了解孩子的發音錯誤音的狀況之外，還可以有衛教單張讓家長了解如何與孩子互動或協助自己的孩子。
    </string>
    <string name="iQ1">「SPEAK 說話好好說」的錄音檔案都將保存上傳至醫院託管於google的加密伺服器，收音的基本資料都不外洩或作為研究用途之外的使用。</string>
    <string name="iA11">「同意」國泰醫療財團法人國泰綜合醫院作為特定目的及公務之蒐集、處理與利用。</string>
    <string name="iA12">「不同意」國泰醫療財團法人國泰綜合醫院作為特定目的及公務之蒐集、處理與利用。</string>
    <string name="iQ2">「SPEAK 說話好好說」是利用人工智慧的方式進行測試，資料的保存除了託管保存至google加密伺服器之外，為了強化人工智慧的精準性，\n
        我們團隊將使用收音來的音檔隨時更新現有的模型，更新後的模型不包含小朋友的個案資料，更新的資料讓使用者的APP可以自動連上該伺服器下載最新型的模型
    </string>
    <string name="iA21">「同意」收音的音檔作為人工智慧訓練之用，以利隨時更新現有的模型。</string>
    <string name="iA22">「不同意」收音的音檔作為人工智慧訓練之用。</string>
    <string name="i1">親愛的家長您好\n以下的基本資料麻煩您花2–3分鐘填寫\n*以下的基本資料是為了更了解您的孩子，請您放心的填寫，此份資料不外洩。</string>
    <string name="Qname">兒童姓名</string>
    <string name="Qdata">選擇出生日期</string>
    <string name="Qyes">確定</string>
    <string name="Qno">返回</string>
    <string name="result_note">如果有擔憂建議可找尋您居家附近的\n語言治療師進行進一步的評估與治療</string>
    <string name="back_home">回首頁</string>
    <string name="save_data">保存數據</string>
    <string name="upload_btn">上傳數據</string>
    <string name="save_upload_btn">保存並上傳數據</string>
    <string name="record_btn">record_btn</string>
    <string name="play_btn">play_btn</string>
    <string name="next_page">下一頁</string>
    <string name="more_info_title">一起碎碎念</string>
    <string name="web_link_1">https://drive.google.com/drive/folders/1mZ7nKUWaxP8deki9PtXya--Ba3CNoU-v?usp=sharing</string>
    <string name="web_link_2">https://drive.google.com/drive/folders/16sGiAgnnLMDZ8EE93NWjRJ1qzrv3pwY8?usp=sharing</string>
    <string name="web_link_3">https://drive.google.com/drive/folders/1dUkc_ImrTexaATrocw8bwxm8J_WivNji?usp=sharing</string>
    <string name="web_link_4">https://drive.google.com/drive/folders/1xOaUjZDq7l2FTeANk3wVqScFyRHbwrXI?usp=sharing</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>